--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "lib/index.js",
   "scripts": {
-    "start": "nodemon --watch src --require ts-node/register src/index.ts",
+    "start": "nodemon --watch src --watch input.txt --require ts-node/register src/index.ts",
     "run": "npm run build && node lib/index.js",
     "build": "tsc -p ."
   },
@@ -12,6 +12,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/fs-extra": "^5.1.0",
+    "mocha": "^6.1.4",
     "nodemon": "^1.19.0",
     "ts-node": "^8.1.0",
     "typescript": "^3.4.5"
