--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "devDependencies": {
     "@types/fs-extra": "^5.1.0",
     "@types/jest": "^24.0.12",
+    "fs-extra": "^8.0.0",
     "jest": "^24.8.0",
     "jest-junit": "^6.4.0",
     "nodemon": "^1.19.0",
@@ -25,6 +26,6 @@
     "typescript": "^3.4.5"
   },
   "dependencies": {
-    "fs-extra": "^7.0.1"
+    "@rauschma/stringio": "^1.4.0"
   }
 }
