--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
   "compilerOptions": {
     "target": "esnext",
     "module": "commonjs",
+    "lib": ["esnext", "dom"],
     "outDir": "lib",
     "esModuleInterop": true,
     "declaration": true,
