--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
     "prepublish": "npm run build",
     "postversion": "git push --follow-tags"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://gitlab.kristianjones.xyz/kfj-lab/TS-BIND.git"
+  },
   "author": "Kristian Jones <me@kristianjones.xyz>",
   "license": "ISC",
   "devDependencies": {
