--- a/.gitignore
+++ b/.gitignore
@@ -130,3 +130,4 @@ $RECYCLE.BIN/
 # Custom rules (everything added below won't be overriden by 'Generate .gitignore File' if you use 'Update' option)
 
 junit.xml
+lib
