feat: Add bind config parsing refactor: Move to split('\n') and remove readline stuff

--- a/package.json
+++ b/package.json
@@ -31,7 +31,5 @@
     "ts-node": "^8.1.0",
     "typescript": "^3.4.5"
   },
-  "dependencies": {
-    "@rauschma/stringio": "^1.4.0"
-  }
+  "dependencies": {}
 }
