--- a/package.json
+++ b/package.json
@@ -31,5 +31,13 @@
     "ts-node": "^8.1.0",
     "typescript": "^3.4.5"
   },
-  "dependencies": {}
+  "dependencies": {},
+  "keywords": [
+    "BIND",
+    "BIND9",
+    "BIND Zone",
+    "DNS",
+    "zone file",
+    "zone-file"
+  ]
 }
