--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,7 +11,7 @@ jobs:
           node-version: ${{ matrix.node-version }}
       - name: npm install anbd test
         run: npm install
-      - uses: rkusa/jest-action
+      - uses: rkusa/jest-action@latest
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       
